tests/fixtures/invalid/pow_list_list_str.py
# Cannot call pow() with List[int], List[int], Str
x = pow([1, 2, 3], [1, 2, 3], "hello")
